--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,35 @@
-name: Update Snake
+name: Snake Animation
 on:
   schedule:
-    - cron: "0 0 * * *"  # Updates daily at midnight UTC
-  workflow_dispatch:     # Allows manual runs
+    - cron: "0 0 * * *"
+  workflow_dispatch:
   push:
     branches: [ "main" ]
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/snake.svg
-            dist/snake-dark.svg
-      
-      - uses: actions/upload-pages-artifact@v2
-        with:
-          path: dist/
-
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+            output/github-contribution-grid-snake.svg
+            output/github-contribution-grid-snake-dark.svg
+            
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add output/
+          git commit -m "Update snake animation"
+          git push
