--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,35 +1,30 @@
-name: Snake Animation
+name: Snake Generator
 on:
-  schedule:
-    - cron: "0 0 * * *"
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Generate Snake
         uses: Platane/snk@master
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            output/github-contribution-grid-snake.svg
-            output/github-contribution-grid-snake-dark.svg
-            
-      - name: Commit and Push
+          svg_out_path: snake.svg
+
+      - name: Push to Repository
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add output/
-          git commit -m "Update snake animation"
+          git add snake.svg
+          git commit -m "Update snake"
           git push
