--- a/snake.yml
+++ b/snake.yml
@@ -1,18 +1,33 @@
-name: Generate Snake
+name: Update Snake Animation
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "30 23 * * *"  # Runs daily before midnight UTC
+  workflow_dispatch:       # Allows manual runs
+  push:
+    branches: [ "main" ]   # Runs when you push to main
+
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write      # Required to push changes
+    
     steps:
       - uses: actions/checkout@v4
-      - uses: Platane/snk@master
+        
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
-          github_user_name: PaceRunerz
-          svg_out_path: output/github-contribution-grid-snake.svg
-      - uses: actions/upload-artifact@v3
-        with:
-          name: snake
-          path: output/
+          github_user_name: ${{ github.repository_owner }}
+          show_other_dots: true  # ← Makes snake visible with few contributions
+          outputs: |
+            output/github-contribution-grid-snake.svg
+            output/github-contribution-grid-snake-dark.svg
+            
+      - name: Commit and Push
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add output/
+          git commit -m "Update snake animation"
+          git push
