--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,40 +1,37 @@
-name: GitHub Snake Animation
+name: Snake Animation
 on:
   schedule:
-    - cron: "30 23 * * *"  # Runs daily at 23:30 UTC (30 mins before midnight)
-  workflow_dispatch:
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:     # Allows manual runs
   push:
-    branches: [ "main" ]
+    branches: [ "main" ] # Runs on pushes to main
 
 jobs:
-  generate:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
     permissions:
-      contents: write  # Required to push to branch
-
+      contents: write   # Required to push changes
+    
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Get complete commit history
+          fetch-depth: 0  # Get full commit history
 
-      - name: Generate Snake Animation
+      - name: Generate snake
         uses: Platane/snk@master
+        id: snake
         with:
           github_user_name: ${{ github.repository_owner }}
-          min_contributions: 1  # Show animation even with few contributions
-          show_other_dots: true  # Creates movement effect
-          dot_size: 10           # Better visibility
-          outputs: |
-            assets/snake.svg
-            assets/snake-dark.svg?palette=github-dark
-            assets/snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          svg_out_path: snake.svg
+          dark_svg_out_path: snake-dark.svg
+          gif_out_path: snake.gif
+          min_contributions: 1  # Works even with few commits
 
-      - name: Commit and Push
+      - name: Push to repository
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add assets/
+          git add snake.svg snake-dark.svg snake.gif
           git commit -m "Update snake animation [skip ci]"
           git push
