--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Commit & push if changed
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "PaceRunerz"
+          git config user.email "shreyanshtripathi210@gmial.com"
           git add README.md
           if ! git diff --cached --quiet; then
             git commit -m "chore: update Bhopal weather & timestamp"
